<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="transctionmodel"
            type="com.gox.basemodule.common.payment.transaction.TransactionViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/contentMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF2F2F2"
            android:paddingLeft="@dimen/_15sdp"
            android:visibility="visible"
            android:paddingRight="@dimen/_15sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/colorWhite"
                android:elevation="@dimen/_5sdp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_transaction_list"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/transaction_id"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            android:fontFamily="@font/avenirltstd_medium"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/amount"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            android:fontFamily="@font/avenirltstd_medium"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/status"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            android:fontFamily="@font/avenirltstd_medium"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/transaction_list_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_8sdp"
                        android:padding="@dimen/_5sdp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llEmptyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="#FFF2F2F2"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_no_transaction" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/no_transaction_found"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

    </LinearLayout>

</layout>