<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="manageAddressViewModel"
            type="com.gox.basemodule.common.manage_address.ManageAddressViewModel" />

        <variable
            name="manageAddress"
            type="com.gox.basemodule.adapter.ManageAddressAdapter" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTaxiGrey1"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/toolbar_layout" />

        <LinearLayout
            android:id="@+id/llAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_layout"
            android:orientation="vertical"
            android:visibility="visible"
            >

            <TextView
                android:id="@+id/location_labal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/saved_location"
                style="@style/SmallText"
                android:textColor="@color/black" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/manageaddress_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:adapter="@{manageAddress}"
                android:padding="@dimen/_5sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llEmptyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar_layout"
            android:layout_above="@+id/btnDone"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_address_sign_empty"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                style="@style/SmallText.Black"
                android:text="@string/no_address_found"/>

        </LinearLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_round_corner_curved"
            android:backgroundTint="@color/colorTaxiTheme"
            android:padding="@dimen/_8sdp"
            style="@style/SmallText"
            android:textAllCaps="false"
            android:text="@string/add_new_address"
            android:textColor="@color/colorTaxiWhite"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>
</layout>