<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="cardListViewModel"
            type="com.gox.basemodule.common.cardlist.CardListViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_payment"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/layout_app_toolbar" />

        <TextView
            android:id="@+id/tvPaymentTypes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/payment_modes"
            android:fontFamily="@font/avenirltstd_medium"
            android:textSize="@dimen/_13sdp"
            android:visibility="visible"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_payment_modes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/rl_payment_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:visibility="visible">

            <RelativeLayout
                android:id="@+id/rl_remove"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/bg_payment"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_saved_cards"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:text="@string/saved_card"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <ImageButton
                    android:id="@+id/iv_delete"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_toStartOf="@+id/iv_remove"
                    android:background="@color/bg_button_delete"
                    android:elevation="@dimen/_2sdp"
                    android:onClick="@{() -> cardListViewModel.removeCard()}"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_delete" />

                <ImageButton
                    android:id="@+id/iv_remove"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:background="@color/bg_button_delete"
                    android:elevation="@dimen/_2sdp"
                    android:onClick="@{() -> cardListViewModel.cardDeselect()}"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_payment_cross" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/iv_empty_card"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_empty_state_card" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_remove"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_add_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/bg_white_payment"
                android:fontFamily="@font/avenirltstd_medium"
                android:gravity="center"
                android:paddingStart="@dimen/_50sdp"
                android:paddingEnd="@dimen/_50sdp"
                android:text="@string/add_card"
                android:onClick="@{() -> cardListViewModel.saveCard()}"
                android:textColor="@color/bg_card_selected"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</layout>